# C-Code-Examples

./: .travis.yml  CMakeLists.txt  README.md  circle.yml
.circleci/: config.yml
qpid-messaging/: 10_broadcast_receiver.cpp  10_request_response.cpp  CMakeLists.txt  Makefile  broadcast_receiver.cpp  request_response.cpp
qpid-messaging/resources/: prepare_environment.sh
qpid-messaging/src/: BroadcastReceiver.cpp  BroadcastReceiver.h  CMakeLists.txt  Options.h  RequestResponse.cpp  RequestResponse.h  main.cpp
qpid-messaging/test/: Broadcaster.cpp  Broadcaster.h  CMakeLists.txt  Responder.cpp  Responder.h  ServerOptions.h  test_Broadcaster.cpp  test_Responder.cpp
qpid-messaging/test/resources/: prepare_environment.sh
qpid-proton/: CMakeLists.txt
qpid-proton/src/: BroadcastReceiver.cpp  BroadcastReceiver.h  CMakeLists.txt  Options.h  RequestResponse.cpp  RequestResponse.h  main.cpp
qpid-proton/test/: Broadcaster.cpp  Broadcaster.h  CMakeLists.txt  ClientOptions.h  Responder.cpp  Responder.h  ServerOptions.h  test_Broadcaster.cpp  test_Responder.cpp
